--- a/style.css
+++ b/style.css
@@ -21,6 +21,11 @@ h2 {
     float: left;
 }
 
+.tbl {
+    background-image: url(food.jpg);
+    font-weight: 800;
+}
+
 table {
     border-collapse: collapse;
     width: 100%;
